--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,17 +26,29 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".activities.LoginSignUpActivity"
-            android:exported="true">
-          
+            android:name=".activities.ThanhToanActivity"
+            android:exported="true"
+            android:launchMode="singleTask">
+
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data
+                    android:host="app"
+                    android:scheme="demozpdk" />
+            </intent-filter>
         </activity>
+
+
+        <activity
+            android:name=".activities.LoginSignUpActivity"
+            android:exported="false"></activity>
         <activity
             android:name=".activities.MainActivity"
-            android:exported="true"
             android:configChanges="keyboardHidden|orientation|screenSize"
-            >
-
-        </activity>
+            android:exported="false"></activity>
     </application>
 
 </manifest>
